big fixes, added description change, perf improvement
there won't be description overlap anymore

--- a/dark-theme.css
+++ b/dark-theme.css
@@ -7,7 +7,7 @@ a:link {
     color: #5F89CE;
 }
 a:visited {
-    color: #A85FD3;
+    color: #885FDF;
 }
 a:hover {
 }
